--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Questions_Activity"></activity>
+
+        <activity android:name=".Questions_Activity"
+                   android:theme="@style/Theme.AppCompat.NoActionBar">
+
+
+        </activity>
+
         <activity
             android:name=".SplashScreen"
             android:theme="@style/SplashScreenTheme">
