--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-
-        <activity android:name=".ResultsActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity android:name=".question2Activity"
+                    android:theme="@style/Theme.AppCompat.NoActionBar">
 
         </activity>
 
         <activity
-            android:name=".Questions_Activity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-
-        </activity>
-
+            android:name=".ResultsActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
         <activity
             android:name=".SplashScreen"
             android:theme="@style/SplashScreenTheme">
